Made use of 9-patch images for Philip-Macquarie. [#66496510]